# bigdecimal

./: CMakeLists.txt  Makefile  bigdecimal.cpp  bigdecimal.h  test  tests.cpp
src/: bigdecimal.cpp  bigdecimal.h  bigdecimal_tests.cpp  main.cpp
tests/: bigdecimal_tests  bigdecimal_tests.cpp
